--- a/cluster/argocd/prometheus.yml
+++ b/cluster/argocd/prometheus.yml
@@ -7,7 +7,7 @@ spec:
   project: default
   source:
     repoURL: "ssh://git@github.com/biosimulations/deployment.git"
-    path: cluster/promethues
+    path: cluster/prometheus
     targetRevision: HEAD
   destination:
     server: "https://kubernetes.default.svc"
