--- a/cluster/grafana/kustomization.yaml
+++ b/cluster/grafana/kustomization.yaml
@@ -1,6 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: ingress-nginx
+namespace: grafana
 commonLabels:
   app.kubernetes.io/name: grafana
   app.kubernetes.io/part-of: ingress-nginx
