--- a/cluster/prometheus/role-binding.yaml
+++ b/cluster/prometheus/role-binding.yaml
@@ -4,7 +4,7 @@ metadata:
   name: prometheus-server
 roleRef:
   apiGroup: rbac.authorization.k8s.io
-  kind: Role
+  kind: ClusterRole
   name: prometheus-server
 subjects:
   - kind: ServiceAccount
