--- a/cluster/prometheus/kustomization.yaml
+++ b/cluster/prometheus/kustomization.yaml
@@ -1,18 +1,18 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: prometheus
+namespace: ingress-nginx
 commonLabels:
   app.kubernetes.io/name: prometheus
+  app.kubernetes.io/part-of: ingress-nginx
 resources:
-  - role.yaml
-  - service-account.yaml
-  - role-binding.yaml
-  - deployment.yaml
-  - service.yaml
+- role.yaml
+- service-account.yaml
+- role-binding.yaml
+- deployment.yaml
+- service.yaml
 images:
-  - name: prom/prometheus
-    newTag: latest
+- name: prom/prometheus
 configMapGenerator:
-  - name: prometheus-configuration
-    files:
-      - prometheus.yaml
+- name: prometheus-configuration
+  files:
+  - prometheus.yaml
