--- a/cluster/prometheus/kustomization.yaml
+++ b/cluster/prometheus/kustomization.yaml
@@ -1,6 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: ingress-nginx
+namespace: prometheus
 commonLabels:
   app.kubernetes.io/name: prometheus
   app.kubernetes.io/part-of: ingress-nginx
