update syncx options

--- a/cluster/argocd/grafana.yml
+++ b/cluster/argocd/grafana.yml
@@ -13,6 +13,8 @@ spec:
     server: "https://kubernetes.default.svc"
     namespace: grafana
   syncPolicy:
-    automated: {}
     syncOptions:
       - CreateNamespace=true
+    automated:
+      prune: true
+      selfHeal: true
