--- a/overlays/deploy/kustomization.yml
+++ b/overlays/deploy/kustomization.yml
@@ -45,7 +45,9 @@ resources:
 - ../../config/prod
 - biosimulations-ingress.yml
 - biosimulators-ingress.yml
+- tutorial-ingress.yml
 - ../../base
+
 
 patchesStrategicMerge:
 - resources.yml
