feat(combine-service): added configuration for MAX_CONTENT_LENGTH

--- a/config/prod/combine-service/config.env
+++ b/config/prod/combine-service/config.env
@@ -5,4 +5,9 @@ NATS_QUEUE=combineService
 STORAGE_ENDPOINT=http://s3low.scality.uchc.edu
 STORAGE_BUCKET=biosimprod
 STORAGE_PUBLIC_ENDPOINT=https://files.biosimulations.org/s3/
+
+# seconds
 RUN_COMBINE_ARCHIVE_TIMEOUT=30.0
+
+# bytes
+MAX_CONTENT_LENGTH=256e6
