--- a/base/kustomization.yaml
+++ b/base/kustomization.yaml
@@ -7,7 +7,7 @@ resources:
   - apps/dispatch-service.yml
   - apps/simulators-api.yml
   - apps/mail-service.yml
-  - apps/combine-service.yml
+  - apps/combine-api.yml
   - apps/hsds-service.yml
   - resources/mongo.yml
   - resources/redis-ha.yml
