--- a/overlays/deploy/biosimulations-ingress.yml
+++ b/overlays/deploy/biosimulations-ingress.yml
@@ -30,7 +30,7 @@ spec:
       http:
         paths:
           - backend:
-              serviceName: combine-service
+              serviceName: combine-api
               servicePort: 80
             path: "/combine"
           - backend:
@@ -57,7 +57,7 @@ spec:
       http:
         paths:
           - backend:
-              serviceName: combine-service
+              serviceName: combine-api
               servicePort: 80
     - host: data.biosimulations.org
       http:
