--- a/overlays/deploy/resources.yml
+++ b/overlays/deploy/resources.yml
@@ -18,12 +18,12 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: combine-service
+  name: combine-api
 spec:
   template:
     spec:
       containers:
-        - name: combine-service
+        - name: combine-api
           resources:
             requests:
               memory: "256Mi"
