refactor: organized configuration, corrected payload limit for API, consolidated storaage endpoint to https

--- a/config/prod/combine-api/config.env
+++ b/config/prod/combine-api/config.env
@@ -2,7 +2,7 @@ ENV=prod
 NATS_HOST=nats://nats-cluster:4222
 NATS_QUEUE=combineService
 #UCONN storage bucket
-STORAGE_ENDPOINT=http://s3low.scality.uchc.edu
+STORAGE_ENDPOINT=https://s3low.scality.uchc.edu
 STORAGE_BUCKET=biosimprod
 STORAGE_PUBLIC_ENDPOINT=https://files.biosimulations.org/s3/
 
