--- a/config/prod/shared.env
+++ b/config/prod/shared.env
@@ -2,6 +2,8 @@
 
 #Server Settings
 ENV=prod
+SERVER_PORT=3333
+SERVER_PAYLOAD_LIMIT=50mb
 
 # Authentication settings
 AUTH0_DOMAIN=https://auth.biosimulations.org/
@@ -15,6 +17,9 @@ HPC_SSH_USERNAME=crbmapi
 HPC_BASE_DIR=/home/FCAM/crbmapi/nfs/biosimulations/prod/simulations
 HPC_HOME_DIR=/home/FCAM/crbmapi
 #HPC_SSH_PRIVATE_KEY=
+HPC_EXECUTABLES_PATH="PATH=$PATH:/usr/sbin/"
+HPC_MODULE_PATH=/home/FCAM/crbmapi/module/
+HPC_MODULE_INIT_SCRIPT=/usr/share/Modules/init/bash
 
 #Nats address
 NATS_HOST=nats://nats:4222
@@ -22,6 +27,7 @@ NATS_HOST=nats://nats:4222
 
 # Storage bucket
 STORAGE_ENDPOINT=https://s3low.scality.uchc.edu
+STORAGE_EXTERNAL_ENDPOINT=https://s3low.scality.uchc.edu
 STORAGE_PUBLIC_ENDPOINT=https://files.biosimulations.org/s3/
 STORAGE_BUCKET=biosimprod
 #STORAGE_ACCESS_KEY=
