--- a/config/dev/combine-api/config.env
+++ b/config/dev/combine-api/config.env
@@ -2,7 +2,7 @@ ENV=dev
 NATS_HOST=nats://nats-cluster:4222
 NATS_QUEUE=combineService
 #UCONN storage bucket
-STORAGE_ENDPOINT=http://s3low.scality.uchc.edu
+STORAGE_ENDPOINT=https://s3low.scality.uchc.edu
 STORAGE_BUCKET=biosimdev
 STORAGE_PUBLIC_ENDPOINT=https://files-dev.biosimulations.org/s3/
 
