refactor: added HSDS external basepath configuration

--- a/config/dev/shared.env
+++ b/config/dev/shared.env
@@ -41,6 +41,7 @@ REDIS_PORT=6379
 #HSDS_USERNAME=
 #HSDS_PASSWORD=
 HSDS_BASEPATH=http://hsds:80
+HSDS_EXTERNAL_BASEPATH=https://data.biosimulations.dev
 
 #Public URLS
 DISPATCH_URL=https://run.api.biosimulations.dev/
