--- a/config/dev/kustomization.yml
+++ b/config/dev/kustomization.yml
@@ -39,3 +39,6 @@ configMapGenerator:
   - name: ontology-api-config
     files:
       - ontology-api/config.env
+  - name: tools-config
+    files:
+      - tools/config.env
