--- a/config/dev/hsds/override.yml
+++ b/config/dev/hsds/override.yml
@@ -1,1 +1,1 @@
-default_public: True # new domains are publically readable by default
+default_public: true # new domains are publically readable by default
