added configuration for HSDS client

--- a/config/prod/shared.env
+++ b/config/prod/shared.env
@@ -43,5 +43,9 @@ REDIS_PORT=6379
 HSDS_BASEPATH=http://hsds:80
 HSDS_EXTERNAL_BASEPATH=https://data.biosimulations.org
 
+# HSDS client
+HSDS_CLIENT_INITIAL_INTERVAL=100 # ms
+HSDS_CLIENT_MAX_RETRIES=12
+
 #Public URLS
 DISPATCH_URL=https://run.api.biosimulations.org/
