remove unused run.api.biosimulations

--- a/config/prod/shared.env
+++ b/config/prod/shared.env
@@ -48,4 +48,4 @@ HSDS_CLIENT_INITIAL_INTERVAL=100 # ms
 HSDS_CLIENT_MAX_RETRIES=12
 
 #Public URLS
-DISPATCH_URL=https://run.api.biosimulations.org/
+DISPATCH_URL=https://api.biosimulations.org/
