--- a/overlays/dev/kustomization.yml
+++ b/overlays/dev/kustomization.yml
@@ -26,7 +26,7 @@ replicas:
 - count: 0
   name: account-api
 - count: 2
-  name: dispatch-api
+  name: api
 - count: 2
   name: dispatch-service
 - count: 2
