--- a/overlays/dev/resources.yml
+++ b/overlays/dev/resources.yml
@@ -1,12 +1,12 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: dispatch-api
+  name: api
 spec:
   template:
     spec:
       containers:
-        - name: dispatch-api
+        - name: api
           resources:
             requests:
               memory: "4Mi"
