change database, rename dispatch app

--- a/config/prod/kustomization.yml
+++ b/config/prod/kustomization.yml
@@ -5,16 +5,13 @@ configMapGenerator:
   - name: shared-config
     files:
       - shared.env
-  - name: platform-api-config
-    files:
-      - platform-api/config.env
   - name: account-api-config
     files:
       - account-api/config.env
-  - name: dispatch-api-config
+  - name: api-config
     namespace: default
     files:
-      - dispatch-api/config.env
+      - api/config.env
   - name: dispatch-service-config
     files:
       - dispatch-service/config.env
