--- a/overlays/dev/biosimulations-ingress.yml
+++ b/overlays/dev/biosimulations-ingress.yml
@@ -35,26 +35,26 @@ spec:
               servicePort: 80
             path: /account
           - backend:
-              serviceName: dispatch-api
+              serviceName: api
               servicePort: 80
             path: /runs
           - backend:
-              serviceName: dispatch-api
+              serviceName: api
               servicePort: 80
             path: /metadata
           - backend:
-              serviceName: dispatch-api
+              serviceName: api
               servicePort: 80
             path: /results
           - backend:
-              serviceName: dispatch-api
+              serviceName: api
               servicePort: 80
 
     - host: run.api.biosimulations.dev
       http:
         paths:
           - backend:
-              serviceName: dispatch-api
+              serviceName: api
               servicePort: 80
 
 
