--- a/cluster/argocd/prometheus.yml
+++ b/cluster/argocd/prometheus.yml
@@ -11,7 +11,7 @@ spec:
     targetRevision: HEAD
   destination:
     server: "https://kubernetes.default.svc"
-    namespace: prometheus
+    namespace: ingress-nginx
   syncPolicy:
     syncOptions:
       - CreateNamespace=true
