correct  prom/grafana ingress to v1

--- a/cluster/grafana/ingress.yaml
+++ b/cluster/grafana/ingress.yaml
@@ -19,5 +19,6 @@ spec:
       - backend:
           service:
             name: grafana
-            servicePort: 3000
+            port:
+              number: 3000
             
