--- a/cluster/prometheus/ingress.yaml
+++ b/cluster/prometheus/ingress.yaml
@@ -19,5 +19,6 @@ spec:
       - backend:
           service:
             name: prometheus-server
-            servicePort: 9090
+            port:
+              number: 9090
             
