add combine helath check

--- a/base/apps/combine-api.yml
+++ b/base/apps/combine-api.yml
@@ -40,6 +40,9 @@ spec:
         - name: shared
           configMap:
             name: shared-config
+      healthChecks:
+        - httpGet:
+            path: /health
 ---
 apiVersion: v1
 kind: Service
