--- a/cluster/nginx-ingress/deploy.yml
+++ b/cluster/nginx-ingress/deploy.yml
@@ -340,6 +340,7 @@ spec:
             - --validating-webhook=:8443
             - --validating-webhook-certificate=/usr/local/certificates/cert
             - --validating-webhook-key=/usr/local/certificates/key
+            - --metrics-per-host=false
           securityContext:
             capabilities:
               drop:
