--- a/overlays/dev/biosimulators-ingress.yml
+++ b/overlays/dev/biosimulators-ingress.yml
@@ -1,22 +1,27 @@
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  annotations:
+  name: dev-simulators-ingress
+  labels:
+    name: dev-simulators-ingress
+annotations:
     kubernetes.io/ingress.class: "nginx"
     cert-manager.io/cluster-issuer: "letsencrypt-prod"
     nginx.ingress.kubernetes.io/proxy-body-size: "600m"
     nginx.org/client-max-body-size: "600m"
-  name: dev-simulators-ingress
-  namespace: default
-spec:
+spec: 
   tls:
     - hosts:
         - api.biosimulators.dev
-      secretName: biosimulators-dev-certificate
+      secretName:  dev-biosimulators-ingress-tls
   rules:
-    - host: api.biosimulators.dev
-      http:
-        paths:
-          - backend:
-              serviceName: simulators-api
-              servicePort: 80
+  - host:  api.biosimulators.dev
+    http:
+      paths:
+      - pathType: Prefix
+        path: "/"
+        backend:
+          service:
+            name: simulators-api
+            port: 
+              number: 80
