--- a/overlays/dev/hsds-ingress.yml
+++ b/overlays/dev/hsds-ingress.yml
@@ -4,10 +4,14 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: nginx
 
-  name: dev-data-service-ingress
+  name: dev-hsds-ingress
   labels:
-    name: dev-data-service-ingress
+    name: dev-hsds-ingress
 spec:
+  tls:
+    - hosts:
+      - data.biosimulations.dev
+      secretName: dev-hsds-ingress-tls
   rules:
   - host: data.biosimulations.dev
     http:
