--- a/cluster/grafana/deployment.yaml
+++ b/cluster/grafana/deployment.yaml
@@ -28,6 +28,7 @@ spec:
             - mountPath: /var/lib/grafana
               name: data
       restartPolicy: Always
+      #todo add persistent storage
       volumes:
         - emptyDir: {}
           name: data
