fix url spelling

--- a/overlays/dev/combine-ingress.yml
+++ b/overlays/dev/combine-ingress.yml
@@ -11,7 +11,7 @@ metadata:
 spec:
   tls:
     - hosts: 
-      - combine.api.bioimulations.dev
+      - combine.api.biosimulations.dev
     
       secretName: combine-ingress-tls
   
