--- a/cluster/nginx-ingress/deploy.yml
+++ b/cluster/nginx-ingress/deploy.yml
@@ -263,12 +263,13 @@ apiVersion: v1
 kind: Service
 metadata:
   annotations:
+    prometheus.io/port: "10254"
+    prometheus.io/scrape: "true"
   labels:
     helm.sh/chart: ingress-nginx-3.33.0
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/instance: ingress-nginx
     app.kubernetes.io/version: 0.47.0
-    app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: controller
   name: ingress-nginx-controller
   namespace: ingress-nginx
@@ -304,6 +305,7 @@ metadata:
   name: ingress-nginx-controller
   namespace: ingress-nginx
 spec:
+  replicas: 3
   selector:
     matchLabels:
       app.kubernetes.io/name: ingress-nginx
@@ -340,7 +342,6 @@ spec:
             - --validating-webhook=:8443
             - --validating-webhook-certificate=/usr/local/certificates/cert
             - --validating-webhook-key=/usr/local/certificates/key
-            - --metrics-per-host=false
           securityContext:
             capabilities:
               drop:
