--- a/overlays/dev/hsds-ingress.yml
+++ b/overlays/dev/hsds-ingress.yml
@@ -51,7 +51,7 @@ spec:
             name: hsds
             port: 
               number: 80              
-      - pathType: Exact
+      - pathType: Prefix
         path: "/"
         backend:
           service:
