--- a/overlays/dev/api-ingress.yml
+++ b/overlays/dev/api-ingress.yml
@@ -82,7 +82,7 @@ spec:
             name: api
             port: 
               number: 80                                
-      - pathType: Exact
+      - pathType: Prefix
         path: "/"
         backend:
           service:
