--- a/overlays/dev/resources.yml
+++ b/overlays/dev/resources.yml
@@ -12,8 +12,8 @@ spec:
               memory: "4Mi"
               cpu: "25m"
             limits:
-              memory: "256Mi"
-              cpu: "750m"
+              memory: "1Gi"
+              cpu: "1000m"
 ---
 apiVersion: apps/v1
 kind: Deployment
