--- a/base/apps/hsds-service.yml
+++ b/base/apps/hsds-service.yml
@@ -83,11 +83,11 @@ spec:
               mountPath: "/config/passwd.txt"
               subPath: passwd.txt
             - name: config
-              mountPath: "/config/config.yml"
-              subPath: config.yml
+              mountPath: "/config/config.yaml"
+              subPath: config.yaml
             - name: override
-              mountPath: "/config/override.yml"
-              subPath: override.yml
+              mountPath: "/config/override.yaml"
+              subPath: override.yaml
         - name: dn
           image: hdfgroup/hsds:v0.7.0beta7
           lifecycle:
@@ -124,11 +124,11 @@ spec:
               mountPath: "/config/password/passwd.txt"
               subPath: "passwd.txt"
             - name: config
-              mountPath: "/config/config.yml"
-              subPath: config.yml
+              mountPath: "/config/config.yaml"
+              subPath: config.yaml
             - name: override
-              mountPath: "/config/override.yml"
-              subPath: override.yml
+              mountPath: "/config/override.yaml"
+              subPath: override.yaml
       volumes:
         - name: accounts
           secret:
