--- a/base/kustomization.yaml
+++ b/base/kustomization.yaml
@@ -2,13 +2,13 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - apps/account-api.yml
-  - apps/api.yml
-  - apps/dispatch-service.yml
-  - apps/simulators-api.yml
-  - apps/mail-service.yml
-  - apps/combine-api.yml
-  - apps/hsds-service.yml
-  - resources/mongo.yml
-  - resources/redis-ha.yml
-  - resources/nats.yml
+  - apps/account-api.yaml
+  - apps/api.yaml
+  - apps/dispatch-service.yaml
+  - apps/simulators-api.yaml
+  - apps/mail-service.yaml
+  - apps/combine-api.yaml
+  - apps/hsds-service.yaml
+  - resources/mongo.yaml
+  - resources/redis-ha.yaml
+  - resources/nats.yaml
