--- a/cluster/argocd/argo-cm.yaml
+++ b/cluster/argocd/argo-cm.yaml
@@ -4,7 +4,7 @@ metadata:
   name: argocd-cm
   namespace: argocd
   labels:
-    app.kubernetes.io/name: argocd-cm
+    app.kubernetes.io/name: argo-cm
     app.kubernetes.io/part-of: argocd
 data:
   # Argo CD's externally facing base URL (optional). Required when configuring SSO
