--- a/config/prod/shared.env
+++ b/config/prod/shared.env
@@ -40,7 +40,7 @@ REDIS_PORT=6379
 # HSDS INFORMATION
 #HSDS_USERNAME=
 #HSDS_PASSWORD=
-HSDS_BASEPATH=http://hsds:80
+HSDS_BASEPATH=http://data:80
 HSDS_EXTERNAL_BASEPATH=https://data.biosimulations.org
 
 # HSDS client
