--- a/overlays/deploy/biosimulations-ingress.yml
+++ b/overlays/deploy/biosimulations-ingress.yml
@@ -62,5 +62,5 @@ spec:
       http:
         paths:
           - backend:
-              serviceName: hsds
+              serviceName: data
               servicePort: 80
