--- a/cluster/argocd/argo-cm.yaml
+++ b/cluster/argocd/argo-cm.yaml
@@ -2,7 +2,6 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: argocd-cm
-  namespace: argocd
   labels:
     app.kubernetes.io/name: argo-cm
     app.kubernetes.io/part-of: argocd
@@ -77,7 +76,7 @@ data:
   #application.instanceLabelKey: mycompany.com/appname
 
   # disables admin user. Admin is enabled by default
-  admin.enabled: "false"
+  admin.enabled: "true"
   # add an additional local user with apiKey and login capabilities
   #   apiKey - allows generating API keys
   #   login - allows to login using UI
