update ingress version

--- a/cluster/argocd/argo-ingress.yaml
+++ b/cluster/argocd/argo-ingress.yaml
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: argocd-server-ingress
@@ -7,20 +7,23 @@ metadata:
     cert-manager.io/cluster-issuer: letsencrypt-prod
     kubernetes.io/ingress.class: nginx
     kubernetes.io/tls-acme: "true"
-    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
+    nginx.ingress.kubernetes.io/ssl-passthrough: "true"    
     # If you encounter a redirect loop or are getting a 307 response code
     # then you need to force the nginx ingress to connect to the backend using HTTPS.
     #
     nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
 spec:
   rules:
-    - host: deployment.biosimulations.org
-      http:
-        paths:
-          - backend:
-              serviceName: argocd-server
-              servicePort: https
-            path: /
+  - host: deployment.biosimulations.org
+    http:
+      paths:
+      - pathType: Prefix
+        path: "/"
+        backend:
+          service:
+            name: argo-cd-server
+            port: 
+              number: 443
   tls:
     - hosts:
         - deployment.biosimulations.org
